# mppm

./: .coveragerc  .gitignore  main.py  main.spec  mppm.code-workspace  mppm.py  mypy.ini  pyproject.toml  pytest.ini
mppm/: __init__.py  analyze.py  audio_file_handler.py  folder_handler.py  utils.py
mppm/gui/: __init__.py  gui_audio_file.py
mppm/gui/style/: __init__.py
music_production_project_manager/: analyze.py  audio_file_handler.py  folder_handler.py
music_production_project_manager/gui/: default_style.py  gui.py  gui_audio_file.py
music_production_project_manager/gui/style/: components.py  core.py  mineral.json
tests/: test_analyze.py  test_audio_file_handler.py  test_folder_handler.py  test_music_production_project_manager.py  test_utils.py
tests/audio_files/: gen_audio_files.py
tests/gui/: test_core.py
