[tool.poetry]
name = "music_production_project_manager"
version = "0.1.0"
description = "A set of tools for project related tasks during music production"
authors = ["RCJacH <RCJacH@Outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8.1"
mypy = "^0.761"
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
