[tool.poetry]
name = "music_production_project_manager"
version = "0.1.0"
description = "A set of tools for project related tasks during music production"
authors = ["RCJacH <RCJacH@Outlook.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/RCJacH/mppm"
classifiers = [
    "Programming Language :: Python",
    "Topic :: Artistic Software",
    "Topic :: Desktop Environment",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis"
]

[tool.poetry.dependencies]
python = "^3.8"
soundfile = "^0.10.3"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8.1"
mypy = "^0.761"
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.7.9"
pytest-mock = "^2.0.0"
pytest-benchmark = "^3.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
